Styling for vote description evidence string

--- a/www/docs/style/sass/pages/_mp.scss
+++ b/www/docs/style/sass/pages/_mp.scss
@@ -654,6 +654,14 @@
   }
 }
 
+.vote-description__evidence {
+  display: block;
+  color: #757470;
+  font-size: 0.7em;
+  line-height: 1.5em;
+  margin-top: 0.2em;
+}
+
 .policy-votes-list-footer {
     p {
         margin-bottom: 0.5em;
